[workspace]
members = [
    "package",
]

[package]
name = "ptex"
version = "0.6.0"
edition = "2021"
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"

[dependencies.curl]
version = "0.4"
default-features = false
features = [
    "http2",
    "ntlm",
    "protocol-ftp",
    "ssl",
    "static-curl",
    "static-ssl",
    "zlib-ng-compat"
]

[dev-dependencies]
sha2 = "0.10"
tempfile = "3.5"

[[test]]
name = "cli"
path = "tests/cli.rs"
