[workspace]
members = [
    "package",
]

[package]
name = "ptex"
version = "0.7.1"
edition = "2021"
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dependencies.curl]
# This is 0.4.45 with a patch to Cargo.toml to add a missing feature requirement on the windows-sys
# crate.
# TODO(John Sirois): Switch back to mainline when https://github.com/alexcrichton/curl-rust/pull/547
# is resolved.
git = "https://github.com/a-scie/curl-rust"
rev = "9f8c905174d1d3afa675d852f01818f76d21106e"

version = "0.4"
default-features = false
features = [
    "http2",
    "ntlm",
    "protocol-ftp",
    "ssl",
    "static-curl",
    "static-ssl",
    "zlib-ng-compat"
]

[dev-dependencies]
sha2 = "0.10"
tempfile = "3.10"

[[test]]
name = "cli"
path = "tests/cli.rs"
